update depricated code